# honeypot

./: .env.example  README.md  README.rst  main.py  pyproject.toml  tox.ini
src/honeypot/: route.py
src/utils/: logging_config.py
